    Energy delta data can be reset by accessing "Reset" menu.

* RestAPI Module
  - Read "virtual energy" values from LMU's Rest API
    for used in Energy Module.
  - Read "steering wheel range" value from LMU's Rest API
    for used in Steering Widget.
    This value is only used when "steering wheel range" value
    cannot be read from sharedmemory API.
  - Fixed a timeout error.

* Fuel Widget
  - Add "swap_upper_caption" and "swap_lower_caption" options,
    which swap caption row position.
  - Add "column_index_*" options, which set display order for
    upper, middle, and lower rows.

* Lap time history Widget, Stint history Widget
  - Add "show_virtual_energy_if_available" option,
    which shows virtual energy consumption instead of
    fuel consumption if available.
    This option is enabled by default.

* [New]Virtual Energy Widget
  - Show Virtual Energy usage data. Most settings and functionalities
    work the same way as Fuel Widget.
  - Show "fuel ratio" between estimated fuel and energy consumption,
    which can help balance fuel and energy usage,
    as well as providing refueling reference for adjusting
    pitstop `Fuel ratio` during race.
  - Virtual Energy usage readings are displayed in percentage,
    which range from 0 to 100.

* Misc
  - Updated User Guide info for Brands preset, Fuel calculator, Energy Module,
    RestAPI Module, Fuel Widget, Lap time history Widget, Stint history Widget,
    Virtual Energy Widget.

2.13.0 (2024-06-08)
-----------------------------
* General
  - Now unloads all image resources on widget close to free up RAM.

* RestAPI Module
  - Add "connection_retry" option, which sets
    number of attempts to retry connection.
    Value range in "0" to "10".
    Default is "3" retries.
  - Add "connection_retry_delay" option, which sets
    time delay in seconds to retry connection.
    Value range in "0" to "60".
    Default is "1" second.
  - Fixed a timeout error.

* [New]Elevation Widget